WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147239
[iOS] Frame snapshots don't factor in page scale
https://bugs.webkit.org/show_bug.cgi?id=147239
Summary
[iOS] Frame snapshots don't factor in page scale
Tim Horton
Reported
2015-07-23 15:31:39 PDT
[iOS] Frame snapshots don't factor in page scale
Attachments
Patch
(5.11 KB, patch)
2015-07-23 15:32 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-07-23 15:32:17 PDT
Created
attachment 257393
[details]
Patch
WebKit Commit Bot
Comment 2
2015-07-23 17:21:19 PDT
Comment on
attachment 257393
[details]
Patch Clearing flags on attachment: 257393 Committed
r187274
: <
http://trac.webkit.org/changeset/187274
>
WebKit Commit Bot
Comment 3
2015-07-23 17:21:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug